# rust-discord-bot

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/commands/: math.rs  meta.rs  owner.rs
